--- a/src/SenseNet.Search.Lucene29.Centralized.Common/SenseNet.Search.Lucene29.Centralized.Common.csproj
+++ b/src/SenseNet.Search.Lucene29.Centralized.Common/SenseNet.Search.Lucene29.Centralized.Common.csproj
@@ -2,11 +2,11 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>7.4.0</Version>
+    <Version>7.4.0.1</Version>
     <Company>Sense/Net Inc.</Company>
     <Description>Common service elements for the Central Lucene29 Search Engine for the sensenet platform.</Description>
     <Copyright>Copyright © Sense/Net Inc.</Copyright>
-    <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageProjectUrl>https://github.com/SenseNet/sn-search-lucene29</PackageProjectUrl>
     <PackageLicenseUrl>https://github.com/SenseNet/sn-search-lucene29/blob/master/LICENSE</PackageLicenseUrl>
     <RepositoryUrl>https://github.com/SenseNet/sn-search-lucene29.git</RepositoryUrl>
