--- a/src/SenseNet.Search.Lucene29.Centralized.GrpcService/appsettings.json
+++ b/src/SenseNet.Search.Lucene29.Centralized.GrpcService/appsettings.json
@@ -17,7 +17,7 @@
   },
   "sensenet": {
     "tracing": {
-      "TraceCategories":  "System,Security" 
+      "TraceCategories": "System,Security,Index"
     },
     "rabbitmq": {
       "ServiceUrl": ""
