--- a/src/Tests/CentralizedIndexBackupTester/CentralizedIndexBackupTester.csproj
+++ b/src/Tests/CentralizedIndexBackupTester/CentralizedIndexBackupTester.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Grpc.Net.Client" Version="2.28.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="3.1.3" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.1.3" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
@@ -17,6 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\SenseNet.Search.Lucene29.Centralized.GrpcClient\SenseNet.Search.Lucene29.Centralized.GrpcClient.csproj" />
     <ProjectReference Include="..\..\SenseNet.Search.Lucene29.Centralized\SenseNet.Search.Lucene29.Centralized.csproj" />
   </ItemGroup>
 
