--- a/.gitignore
+++ b/.gitignore
@@ -287,3 +287,5 @@ __pycache__/
 *.odx.cs
 *.xsd.cs
 /src/nuget/snadmin/install-services/import/System/Schema/ContentTypes
+**/App_Data/LuceneIndex
+**/App_Data/LocalIndex
