--- a/src/SenseNet.Search.Lucene29.Centralized.GrpcClient/SenseNet.Search.Lucene29.Centralized.GrpcClient.csproj
+++ b/src/SenseNet.Search.Lucene29.Centralized.GrpcClient/SenseNet.Search.Lucene29.Centralized.GrpcClient.csproj
@@ -29,6 +29,8 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.1.7" />
+    <PackageReference Include="Microsoft.Extensions.Options" Version="3.1.7" />
     <PackageReference Include="SenseNet.Tools" Version="3.2.4" />
   </ItemGroup>
 
